[gd_scene load_steps=5 format=3 uid="uid://ddylky5tp6bpd"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_w3yxl"]
[ext_resource type="Script" path="res://scripts/world.gd" id="2_4ply8"]
[ext_resource type="PackedScene" uid="uid://60nvyx6hcw6k" path="res://scenes/player.tscn" id="3_wtd56"]
[ext_resource type="PackedScene" uid="uid://bkrfx4kk46qui" path="res://scenes/ui_elements/hud.tscn" id="4_rtwsy"]

[node name="Game" type="Node"]
process_mode = 3
script = ExtResource("1_w3yxl")

[node name="Veil" type="CanvasLayer" parent="."]
layer = 5

[node name="Veil" type="ColorRect" parent="Veil"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12549, 0.0823529, 0.2, 1)

[node name="Background" type="CanvasLayer" parent="."]
layer = -3

[node name="Background" type="ColorRect" parent="Background"]
z_index = -2
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12549, 0.0823529, 0.2, 1)

[node name="World" type="Node2D" parent="."]
process_mode = 1
texture_filter = 1
script = ExtResource("2_4ply8")

[node name="Player" parent="World" instance=ExtResource("3_wtd56")]
z_as_relative = false
position = Vector2(160, 90)
collision_mask = 5

[node name="Hud" parent="." instance=ExtResource("4_rtwsy")]

[connection signal="bullet_fired" from="World/Player" to="World" method="_on_bullet_fired"]
[connection signal="dash_energy_changed" from="World/Player" to="Hud" method="update_energy"]
[connection signal="died" from="World/Player" to="Hud" method="_on_player_died"]
[connection signal="exploded" from="World/Player" to="World" method="_on_explosion"]
[connection signal="ghost_spawned" from="World/Player" to="World" method="_on_ghost_spawned"]
[connection signal="health_changed" from="World/Player" to="Hud" method="update_health"]
[connection signal="max_energy_changed" from="World/Player" to="Hud" method="update_max_energy"]
[connection signal="max_health_changed" from="World/Player" to="Hud" method="update_max_health"]
[connection signal="max_shield_hp_changed" from="World/Player" to="Hud" method="update_max_shield"]
[connection signal="shield_hp_changed" from="World/Player" to="Hud" method="update_shield"]
